<resources>
    <string name="app_name">ParisCart</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crip01">Você deve ter notado em jornais ou na internet sobre como o valor do Real caiu bastante, como o dólar subiu e também sentiu no bolso na hora de fazer compras no supermercado. Isso acontece porque essas moedas são facilmente manipuláveis pelos bancos centrais de cada país. Resumindo, pode-se imprimir mais dinheiro sem problemas e isso faz você perder poder de compra, podendo comprar cada vez menos produtos usando tal moeda.</string>
    <string name="crip02">Isso sempre termina em casos como no Brasil durante a época da hiperinflação na década de 90 ou na Argentina hoje. Cada vez as pessoas perdem dinheiro sem nem ao menos perceber isso. Apenas sentem isso ao comprar coisas. Daí surge a ideia das criptomoedas. Já ouviu falar sobre Bitcoin? Em 2009 a moeda valia menos de um real, hoje seu valor é de aproximadamente 60 mil reais. Isso porque ela não permite que governos imprimam mais dinheiro e assim seu dinheiro não perde valor. Além de você ter chance de ganhar algum dinheiro investindo nisso.</string>
    <string name="crip03">Outra vantagem de moedas como o Bitcoin é a praticidade. Você não precisa de um cartão de crédito ou estar com dinheiro em mãos para fazer ou receber um pagamento. Basta que você esteja com seu celular em mãos, abrir uma carteira (aplicativo) e escanear o QR Code da pessoa que você quer pagar. Em minutos a pessoa receberá o dinheiro. E existem tecnologias novas como o Lightning Network que enviam o dinheiro no mesmo momento e com taxas quase nulas. Vale a pena conferir.</string>
    <string name="crip04">Mas o PIX não vai fazer isso também? Bem, além do problema do real citado no começo, temos que informar que o PIX não é seguro. Seu protocolo de segurança é muito fácil de ser quebrado, e você pode ser monitorado cada vez mais por órgãos do governo ou por terceiros mal intencionados. Por exemplo: se um governante "supor" que você fez algo de errado, seu dinheiro é bloqueado na hora, e você não tem o que fazer. Imagine isso como um Plano Collor atual.</string>
    <string name="crip05">Já com Bitcoin, você não corre esse risco. Você cria uma carteira, copie as palavras chave (AVISO: Guarde essas palavras com muito cuidado e não mostre a ninguém, elas são a única forma de você recuperar sua carteira se você, por exemplo, for assaltado e perder o celular ou esquecer a senha). Recomendo um canal do YouTube chamado Bitcoinheiros onde essa parte de segurança é muito bem explicada.</string>
    <string name="crip06">Além disso, você é dono do seu dinheiro. Ninguém vai poder manipulá-lo ou confiscar caso ache que você fez algo errado ou quando bem entender. E cada vez mais o mundo vem aderindo a essa moeda. Com certeza vale a pena manter pelo menos uma parte do patrimônio em criptomoedas.</string>
    <string name="crip07">Aproveite já o universo das criptos e ganhe descontos de 10% aqui no ParisCart!</string>
</resources>